--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@ margin: 0 auto;
 <p>This is my awesome website.</p>
 <br>
 <p>i want to add a link here, and make the text red. Then i want a shopping list:</p>
+
+  
+  </html>
