--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 <style>
 body {
-font-family: Arial;
 font-size: 20px;
 max-width: 600px;
 margin: 0 auto;
@@ -23,5 +22,5 @@ margin: 0 auto;
 <br>
 <p>i want to add a link here, and make the text red. Then i want a shopping list:</p>
 
-  
-  </html>
+  </div>
+ </html>
