--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-
+<body>
 <div id="header">
 <h1 style="text-align: center;">Hello, love</h1>
 </div>
@@ -27,4 +27,5 @@
 <p>i want to add a link here, and make the text red. Then i want a shopping list:</p>
 
   </div>
+  </body>
  </html>
