--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="body">
 <p>This is my awesome website.</p>
 <br>
-<p>i want to add a link here, and make the text red. Then i want a shopping list:</p>
+  <p>i want to add a <a href="soyboysky.github.io"><b>link here,</b></a> and make the text <span style="color: red;">red</span>. Then i want a shopping list:</p>
 
   </div>
   </body>
