--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
        }
   </style>
 
-<title>Joooooo</title>
+<title>Launenforschung</title>
 
 </head>
 
 <body>
 <div id="header">
-<h1 style="text-align: center;">Hello, love</h1>
+<h1 style="text-align: center;">Launenforschung</h1>
 </div>
 <div id="body">
-<p>This is my awesome website.</p>
-<br>
-  <p>i want to add a <a href="soyboysky.github.io"><b>link here,</b></a> and make the text <span style="color: red;">red</span>. Then i want a shopping list:</p>
+<p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
+<hr>
 
   </div>
   </body>
