--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html> 
 
 <head>
-
+<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
   <style>
 
+    
     body {
 
       font-size: 20px;
       max-width: 600px;
       margin: 0 auto;
       background-color: #c1d0f0;
-       }
+      font-family: 'Cormorant Garamond', serif; 
+    }
   </style>
 
 <title>Launenforschung</title>
