--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       margin: 0 auto;
       background-color: #c1d0f0;
       font-family: 'Cormorant Garamond', serif; 
+      line-height: 40px;
     }
   </style>
 
