--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
   <style>
-
-    
+    h1 {
+      font-family: 'Major Mono Display', monospace;
+    }
     body {
-
       font-size: 20px;
       max-width: 600px;
       margin: 0 auto;
