--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 
 <head>
-<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
   <style>
     h1 {
@@ -13,7 +13,7 @@
       max-width: 600px;
       margin: 0 auto;
       background-color: #c1d0f0;
-      font-family: 'Cormorant Garamond', serif; 
+      font-family: 'Josefin Sans', sans-serif; 
       line-height: 40px;
     }
   </style>
