--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       font-family: 'Josefin Sans', sans-serif; 
       line-height: 40px;
     }
+    hr {
+      display: block;
+      height: 1px;
+      border: 0;
+      border-top: 1px solid #ccc;
+      margin: 1em 0;
+      padding: 0; 
+    }
     
   </style>
 
@@ -24,12 +32,13 @@
 </head>
 
 <body>
-<div id="header">
-<h1 style="text-align: center;">Launenforschung</h1>
-</div>
-<div id="body">
-<p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
-<hr>
+  <div id="header">
+  <h1 style="text-align: center;">Launenforschung</h1>
+  </div>
+  <div id="body">
+  <p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
+  <hr>
+  <img src="https://photos.google.com/photo/AF1QipNR6lwCrLRcCRcpIlC1m5s7DnaZM8FVEw-P_JRW" alt="Home Page Image">
 
   </div>
   </body>
