--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="body">
   <p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
   <hr>
-  <img src="https://photos.google.com/photo/AF1QipNR6lwCrLRcCRcpIlC1m5s7DnaZM8FVEw-P_JRW" alt="Home Page Image">
+  <img src="lfs.jpg" alt="Home Page Image">
 
   </div>
   </body>
