--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="body">
   <p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
   <hr>
-  <img src="lfs.jpg" alt="Home Page Image">
+  <img src="https://ibb.co/T4c9Yrd" alt="Home Page Image">
 
   </div>
   </body>
