--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
   <div id="body">
   <p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
   <hr>
-  <img src="lfs.jpg" alt="Home Page Image" align="center">
-
+   <p style="text-align: center;">
+  <img src="lfs.jpg" alt="Home Page Image">
+    </p>
   </div>
   </body>
  </html>
