--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
   <div id="body">
   <p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
   <hr>
-   <p style="text-align: center;">
-  <img src="lfs.jpg" alt="Home Page Image">
-    </p>
+    <p style="text-align: center;">
+  <img src="https://ibb.co/T4c9Yrd" alt="Home Page Image">
+  <hr>
+  <h2> Introduction </h2>
+  <p> This site is designed as a digital notebook. One that holds almost all the knowledge I collect and produce. This area is designed to also provide me with a go to area to go to when I need to clarify who I am. My ideals, my ideas, my dreams, what keeps me going. It will all be stored here. This is for me to decide who I am and get working towards a better me. This webpage is very much inspired by other online personal wikis such as Devine Lu Linvega's Nataniev , Josh Avanier's Athenaeum  and Mika Naylor's Hrǽw.These sites serve as constant inspiration to create and work smarter.</p>
+
   </div>
   </body>
  </html>
