--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     h1 {
       font-family: 'Major Mono Display', monospace;
     }
+    h2{
+      font-family: 'Major Mono Display', monospace;
+    }
     body {
       font-size: 20px;
       max-width: 600px;
@@ -39,11 +42,16 @@
   <p>Launenforschung pronounced "Lau-nen-vor-shung" is the german word for "whim research". This is what I hope this collection will be. A collection of research, projects, essays and lists I work on.</p>
   <hr>
     <p style="text-align: center;">
-  <img src="https://ibb.co/T4c9Yrd" alt="Home Page Image">
+  <img src="lfs.jpg" alt="Home Page Image">
   <hr>
   <h2> Introduction </h2>
   <p> This site is designed as a digital notebook. One that holds almost all the knowledge I collect and produce. This area is designed to also provide me with a go to area to go to when I need to clarify who I am. My ideals, my ideas, my dreams, what keeps me going. It will all be stored here. This is for me to decide who I am and get working towards a better me. This webpage is very much inspired by other online personal wikis such as Devine Lu Linvega's Nataniev , Josh Avanier's Athenaeum  and Mika Naylor's Hrǽw.These sites serve as constant inspiration to create and work smarter.</p>
-
+  <h2> What this site is </h2>
+  <p>This site is designed to be a backup for all I know. Outside of physical notebooks and the various .txt files buried in folders. Hopefully this is will allow me to learn more about myself and do more. This site was born of out of a simple plain text document I used for a good while. You can find the original here.</p>
+  <h2> Who this site is for </h2>
+  <p>This is built mainly for personal use. However having that extra motivation of people looking into my life serves as a motivator to do more, document more, and share more.</p>
+  <h2>Disclaimer</h2>
+  <p>This work is not supposed to be taken as law. Far from it. This site at often times will be bad, ill-informed, and cringe-worthy. I am attempting to document what works for me and very well may not work for others.</p>
   </div>
   </body>
  </html>
